// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Cordial's createContactactivity destination action: all fields 1`] = `
Object {
  "%!C)I@n7Uu54P": "%!C)I@n7Uu54P",
  "a": "%!C)I@n7Uu54P",
  "properties": Object {
    "testType": "%!C)I@n7Uu54P",
  },
  "time": "2021-02-01T00:00:00.000Z",
}
`;

exports[`Testing snapshot for Cordial's createContactactivity destination action: required fields 1`] = `
Object {
  "%!C)I@n7Uu54P": "%!C)I@n7Uu54P",
  "a": "%!C)I@n7Uu54P",
}
`;
